# hashcat-gui

./: .gitignore  CHANGELOG.md  CMakeLists.txt  ChangeLog  FAQ.md  INSTALL  README  README.md  TODO
.github/workflows/: build-release.yml  ci.yaml
src/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  config.h.in  euladialog.cpp  euladialog.h  hashcat-gui.pro  helperutils.cpp  helperutils.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  settingsmanager.cpp  settingsmanager.h  widgetstateserializer.cpp  widgetstateserializer.h
